scrolling title text in room

--- a/client/css/vidj.less
+++ b/client/css/vidj.less
@@ -7,6 +7,16 @@
 @darkpurple: #6b2151;
 @darkgreen: #4c651f;
 
+.marquee {
+    white-space:no-wrap;
+    overflow:hidden;
+
+    .marquee-text {
+        white-space:nowrap;
+        display:inline;
+        width:auto;
+    }
+}
 
 .purpDull {
     border-left: 10px solid @darkpurple;
