--- a/client/templates/enteredRoom.html
+++ b/client/templates/enteredRoom.html
@@ -12,17 +12,19 @@
               </div>
               {{/constant}}
             {{else}}
-            <div class="col-xs-12 col-sm-10 video-container" style="font-size:30px;color:white;">No Videos :( Try adding one!</div>
+              <div id="msg" class="col-xs-12 col-sm-10 video-container" style="font-size:30px;color:white;">
+                Loading...
+              </div>
             {{/if}}
-          
-          
               <div class="playlist-container col-sm-2">
                 <div class="row">
-                  <div class="row">
-                    <a href="" id="toFullscreen" class="col-sm-6" style="padding: 0px;color: #979797;text-decoration:none;">[fullscreen]</a>
-                    <a href="" id="toAddVideo" class="col-sm-6" style="padding: 0px;color: #979797;text-decoration:none;text-align:right;">[add]</a>
+                  <div class="cl-effect-1 row" style="padding-top:4px;">
+                    <a href="" id="toFullscreen" class="col-md-8" style="padding: 0px;color: #979797;text-decoration:none;">fullscreen</a>
+                    <a href="" id="toAddVideo" class="col-md-4" style="padding: 0px;color: #979797;text-decoration:none;text-align:right;">add</a>
                   </div>
-                  <div style="overflow-x:scroll;width:500px;" id="roomTitle"><h2 class="col-sm-12" id="title">{{room.name}}</h2></div>
+                  <div  id="roomTitle" class="marquee">
+                    <h2 class="marquee-text col-sm-12" id="title">{{room.name}}</h2>
+                  </div>
                   <h5 class="">Room ID: {{room.urlId}}</h5>
                 </div>
                 {{#isolate}}
@@ -49,8 +51,16 @@
                 {{#each videoData}}
                 {{/each}}
                 <div class="controls">
-                  <div class="col-sm-6 " style="text-decoration:none;padding-left:0px;"><a href="" id="previous" style="color:#979797">&lt;prev</a></div>
-                  <div class="col-sm-6 " style="text-decoration:none;text-align:right;"><a href="" id="nextVideo" style="color:#979797">next&gt;</a></div>
+                  <div class="col-sm-6" style="padding-left:0px;">
+                    <a href="" id="previous" style="color:#979797;text-decoration:none;">
+                      &lt;prev
+                    </a>
+                  </div>
+                  <div class="col-sm-6" style="text-decoration:none;text-align:right;">
+                    <a href="" id="nextVideo" style="color:#979797;text-decoration:none;">
+                      next&gt;
+                    </a>
+                  </div>
                 </div>
               </div>
       <div>
